# workspace-tabs

./: .gitignore  LICENSE  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
explorer-core/: Cargo.toml
explorer-core/src/: lib.rs
explorer-shell/: README.md  index.html  package-lock.json  package.json  playwright.config.ts
explorer-shell/e2e/: local-web-lifecycle.spec.ts  workspace.spec.ts
explorer-shell/scripts/: e2e-window-width.ps1  start-local-web-e2e.ps1
explorer-shell/src/: activeHeaderRenderer.dom.test.ts  activeHeaderRenderer.ts  bootstrap.dom.test.ts  bootstrap.ts  contextMenuController.dom.test.ts  contextMenuController.ts  desktopCapability.test.ts  dialogManager.dom.test.ts  dialogManager.ts  fileNotice.test.ts  fileNotice.ts  fileSelection.test.ts  fileSelection.ts  folderListRenderer.dom.test.ts  folderListRenderer.ts  folderWatch.test.ts  folderWatch.ts  inlineEdit.test.ts  inlineEdit.ts  keyboard.test.ts  keyboard.ts  links.test.ts  links.ts  linksRenderer.dom.test.ts  linksRenderer.ts  main.ts  multiSelection.test.ts  multiSelection.ts  notePanel.test.ts  notePanel.ts  notePanelController.test.ts  notePanelController.ts  notePanelRenderer.dom.test.ts  notePanelRenderer.test.ts  notePanelRenderer.ts  notePointer.test.ts  notePointer.ts  notesApi.test.ts  notesApi.ts  projectDragController.dom.test.ts  (+45 more)
explorer-shell/src-tauri/: Cargo.toml  tauri.conf.json
explorer-shell/src-tauri/capabilities/: default.json
explorer-shell/src-tauri/examples/: read_app_state.rs
explorer-shell/src-tauri/src/: lib.rs  main.rs  preview.rs  store.rs
explorer-view-model/: Cargo.toml
explorer-view-model/src/: lib.rs
local-web/: Cargo.toml  build.rs
local-web/src/: main.rs
scripts/: build.cmd  build.ps1
