[package]
name = "explorer-view-model"
version = "0.1.0"
edition = "2021"
authors = ["Atsushi Suzuki"]
license = "MIT"
repository = "https://github.com/tyaso777/workspace-tabs"

[dependencies]
explorer-core = { path = "../explorer-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
