[package]
name = "workspace-tabs-local-web"
version = "0.1.0"
edition = "2021"
authors = ["Atsushi Suzuki"]
license = "MIT"
repository = "https://github.com/tyaso777/workspace-tabs"

[dependencies]
axum = "0.7.9"
explorer-core = { path = "../explorer-core" }
explorer-view-model = { path = "../explorer-view-model" }
futures-util = "0.3.32"
notify = "6"
open = "5.3.5"
rand = "0.8.6"
rfd = "0.16.0"
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "signal", "sync", "test-util", "time"] }

[build-dependencies]
embed-resource = "3.0.9"
