[package]
name = "workspace-tabs"
version = "0.1.0"
description = "Project workspace tab manager"
authors = ["Atsushi Suzuki"]
license = "MIT"
repository = "https://github.com/tyaso777/workspace-tabs"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "explorer_shell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
explorer-core = { path = "../../explorer-core" }
explorer-view-model = { path = "../../explorer-view-model" }
notify = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.16.0"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
